2004-12-15  Sebastien Pouliot  <sebastien@ximian.com>

	* certmgr.cs, signcode.cs, sn.cs: Fixlets to removed compilation 
	warning (for unused variables).

2004-12-13  Sebastien Pouliot  <sebastien@ximian.com>

	* certmgr.cs: Add a new -ssl action to download and add the 
	certificates from an SSL connection into thr right stores.

2004-12-10  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyInfo.cs: Added a class to get informations from assembly
	attributes (and remove common code from all security tools).
	* caspol.cs: New. CAS policy management tool.
	* cert2spc.cs: Updated to use new AssemblyInfo class.
	* certmgr.cs: Updated to use new AssemblyInfo class.
	* chktrust.cs: Updated to use new AssemblyInfo class.
	* Makefile: Added caspol to the build.
	* MakeCert.cs: Updated to use new AssemblyInfo class.
	* secutil.cs: Updated to use new AssemblyInfo class.
	* setreg.cs: Updated to use new AssemblyInfo class.
	* signcode.cs: Updated to use new AssemblyInfo class.
	* sn.cs: Updated to use new AssemblyInfo class.

2004-12-06  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : test .mdb existence (for csc build).

2004-11-26  Raja R Harinath  <rharinath@novell.com>

	* Makefile (PROGRAM_INSTALL_DIR): Define using $(FRAMEWORK_VERSION).

2004-11-22  Raja R Harinath  <rharinath@novell.com>

	* Makefile (all-local) [PROFILE=net_1_1_bootstrap]: Build
	profile-specific "bootstrap" sn.exe.
	($(topdir)/class/lib/$(PROFILE)/sn.exe): New.

2004-10-29  Raja R Harinath  <rharinath@novell.com>

	* Makefile (install-local): Install .mdb files too.
	(uninstall-local): Remove them.

2004-10-27  Sebastien Pouliot  <sebastien@ximian.com>

	* signcode.cs: -i (url) and -n (description) parameters were inverted.

2004-10-22  Sebastien Pouliot  <sebastien@ximian.com>

	* signcode.cs: Better error reporting (e.g. missing files).

2004-09-23  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyInfo.cs: Updated version to 1.1.2 for next release.